--- a/index.html
+++ b/index.html
@@ -149,6 +149,6 @@
     </div>
     </div>
   </section>
-  <p>Scroll to view timeline | Hover over cards to learn more!</p>
+  <p class="instructions">Scroll to view timeline | Hover over cards to learn more!</p>
 </body>
 </html>
